# Permit-PydanticAI

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docs.md  main.py  pyproject.toml
example/: config.py  docs.md  main.py
